# montage_auto

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
montage_auto/: __init__.py  __main__.py  _cli.py  montage.py  rush_sorter.py  silence_remover.py
outil/: analyse.py  insert_deleted.py  reorder_rapport.py
tests/: test_rush_sorter.py  test_silence_remover.py
videos/: LANCER_ANALYSE.bat
